--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../src/css/normalize.css" />
-    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="./src/css/normalize.css" />
+    <link rel="stylesheet" href="./dist/output.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
 
     <title>Bookmark landing page</title>
@@ -20,7 +20,7 @@
         class="container flex max-sm:flex-col items-center max-md:justify-center justify-between"
       >
         <div class="logo max-sm:mb-4">
-          <img src="../images/logo-bookmark.svg" alt="logo" />
+          <img src="./images/logo-bookmark.svg" alt="logo" />
         </div>
         <ul class="links flex items-center justify-between gap-6">
           <li class="link">Featured</li>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="hero-image relative">
-          <img src="../images/illustration-hero.svg" class="z-20" alt="" />
+          <img src="./images/illustration-hero.svg" class="z-20" alt="" />
           <div
             class="w-3/4 max-sm:w-full h-full absolute -bottom-6 -right-1/4 max-sm:right-1/4 rounded-bl-[10rem] bg-blue-800 -z-10"
           ></div>
@@ -107,7 +107,7 @@
         >
           <div class="features-image relative">
             <img
-              src="../images/illustration-features-tab-1.svg"
+              src="./images/illustration-features-tab-1.svg"
               class="image-menu z-20 w-1/4"
               alt=""
             />
@@ -153,7 +153,7 @@
             class="chrome bg-slate-100 p-6 shadow-lg rounded flex items-center justify-center flex-col"
           >
             <div class="image w-20 mb-4">
-              <img src="../images/logo-chrome.svg" alt="" />
+              <img src="./images/logo-chrome.svg" alt="" />
             </div>
             <div class="text">
               <p class="text-slate-800 font-semibold mb-2">Add to Chrome</p>
@@ -171,7 +171,7 @@
             class="firefox bg-slate-100 p-6 shadow-lg rounded flex items-center justify-center flex-col mt-20"
           >
             <div class="image w-20 mb-4">
-              <img src="../images/logo-firefox.svg" alt="" />
+              <img src="./images/logo-firefox.svg" alt="" />
             </div>
             <div class="text">
               <p class="text-slate-800 font-semibold mb-2">Add to Firefox</p>
@@ -189,7 +189,7 @@
             class="opera shadow-lg bg-slate-100 p-6 rounded flex items-center justify-center flex-col mt-40"
           >
             <div class="image w-20 mb-4">
-              <img src="../images/logo-opera.svg" alt="" />
+              <img src="./images/logo-opera.svg" alt="" />
             </div>
             <div class="text">
               <p class="text-slate-800 font-semibold mb-2">Add to Opera</p>
@@ -294,7 +294,7 @@
       >
         <div class="flex gap-8 max-sm:gap-0">
           <div class="logo w-32 max-sm:hidden">
-            <img src="../images/logo-bookmark.svg" alt="" />
+            <img src="./images/logo-bookmark.svg" alt="" />
           </div>
           <ul class="links flex gap-6 max-sm:gap-2">
             <li class="link">Features</li>
@@ -305,8 +305,8 @@
         <div
           class="social-media flex items-end justify-between gap-4 max-sm:gap-3"
         >
-          <img src="../images/icon-facebook.svg" class="w-1" alt="" />
-          <img src="../images/icon-twitter.svg" class="w-1" alt="" />
+          <img src="./images/icon-facebook.svg" class="w-1" alt="" />
+          <img src="./images/icon-twitter.svg" class="w-1" alt="" />
         </div>
       </div>
     </footer>
